--- a/Bill Preview/index.html
+++ b/Bill Preview/index.html
@@ -128,6 +128,9 @@
       .bill-details .total {
         margin-top: 20px;
       }
+      .bill-details .total label {
+        font-weight: bold;
+      }
     </style>
     <title>Bill</title>
   </head>
@@ -274,11 +277,22 @@
             <input type="text" />
           </div>
           <div class="total">
-            <label><strong>Total Payable Amount</strong> </label>
-            <input type="text" />
+            <label id="payable">Total Payable Amount</label>
+            <input class="payableAmount" type="number" value="-1" />
           </div>
         </div>
       </div>
     </div>
+
+    <script>
+      let payText = document.getElementById("payable");
+      let payAmount = document.querySelector(".payableAmount").value;
+
+      if (payAmount < 0) {
+        payText.textContent = "Amount has been returned";
+      } else {
+        payText.textContent = "Total Payable Amount";
+      }
+    </script>
   </body>
 </html>
